@@ -1,12 +1,5 @@
 #!/usr/bin/env python2.2
 
-from peak.running.commands import Bootstrap
-from peak.api import config
-import sys
-
-sys.exit(
-    Bootstrap(
-        config.makeRoot()
-    ).run()
-)
+from peak.running import commands
+commands.runMain( commands.Bootstrap )
 
